--- a/src/conf/toy.yaml
+++ b/src/conf/toy.yaml
@@ -3,11 +3,11 @@ inherit:
     - wandb.yaml
 
 model:
-    n_dims: 5
+    n_dims: 6
     n_positions: 11
 
 training:
-    task: linear_regression
+    task: relu_2nn_regression
     data: gaussian
     task_kwargs: {}
     batch_size: 64
@@ -18,7 +18,7 @@ training:
     curriculum:
         dims:
             start: 5
-            end: 5
+            end: 6
             inc: 1
             interval: 2000
         points:
@@ -27,7 +27,7 @@ training:
             inc: 2
             interval: 2000
 
-out_dir: ./models/linear_regression
+out_dir: ./models/relu_2nn_regression
 
 wandb:
-    name: "linear_regression_toy"
+    name: "relu_2nn_regression_toy"
